--- a/postal.html
+++ b/postal.html
@@ -21,12 +21,12 @@
                 <div id="right-content">
                     <p>bantayan Island is a small island near the  northern coast of Cebu. the Beaches there have the same charm and beauty  as Boracay Island
                         the best thing of vatayan Island is that it isn't commercialized  and is the perfect place to yake a relaxing vacation
-                        It also is accessible for the public for only a small fee in contrast with other famous island</p>
+                        It also is accessible for the public for only a small fee in contrast with other famous island.</p>
                 </div>
             </main>
             <footer>
                 <div id="footer-left">
-                    <p><b>FROM:</b> Jesús and Pablo</p>
+                    <p><b>FROM:</b> Jesús and Pablo.</p>
                 </div>
                 <div id="footer-right">
                     <p><b>TO:</b>  Jorie A.</p>
