--- a/postal.html
+++ b/postal.html
@@ -9,29 +9,29 @@
     <title>Postal - Beaches of Bantayan Island</title>
 </head>
     <body>
-        <div id="postal">
-            <header>
-                <h1>The Beaches of Bantayan Island</h1>
-            </header>
-            <main>
-                <div id="left-img">
-                    <img src="img/playa.avif" alt="">
-                    <hr/>
+        <main>
+            <div id="postal">
+                <div id="header">
+                    <h1>Beaches of Bantayan Island</h1>
                 </div>
-                <div id="right-content">
-                    <p>bantayan Island is a small island near the  northern coast of Cebu. the Beaches there have the same charm and beauty  as Boracay Island
-                        the best thing of vatayan Island is that it isn't commercialized  and is the perfect place to yake a relaxing vacation
+                <div id="postal-content">
+                        <img src="img/imagen.jpg" alt="">
+                        <div id="text">
+                        <p>Bantayan Island is a small island near the  northern coast of Cebu. the Beaches there have the same charm and beauty  as Boracay Island the best thing of vatayan Island is that it isn't commercialized  and is the perfect place to yake a relaxing vacation 
                         It also is accessible for the public for only a small fee in contrast with other famous island.</p>
+                        <p>In our opinion Batayan Island is a beutiful place that you sould visit, is like 
+                        the calm after the storm of a stressful life,  one experience everybody should have at least once in their life so don't hesitate do it, If it was here we wouldn't.</p>
+                        </div>
                 </div>
-            </main>
-            <footer>
-                <div id="footer-left">
-                    <p><b>FROM:</b> Jesús and Pablo.</p>
+                <div id="footer">
+                    <div id="footer-left">
+                        <p><b>FROM:</b> Jesus and Pablo.</p>
+                    </div>
+                    <div id="footer-right">
+                        <p><b>TO:</b> Jorie A.</p>
+                    </div>
                 </div>
-                <div id="footer-right">
-                    <p><b>TO:</b>  Jorie A.</p>
-                </div>
-            </footer>
-        </div>
+            </div>
+        </main>
     </body>
 </html>
