--- a/postal.html
+++ b/postal.html
@@ -15,13 +15,15 @@
                     <h1>Beaches of Bantayan Island</h1>
                 </div>
                 <div id="postal-content">
-                        <img src="img/imagen.jpg" alt="">
-                        <div id="text">
-                        <p>Bantayan Island is a small island near the  northern coast of Cebu. the Beaches there have the same charm and beauty  as Boracay Island the best thing of vatayan Island is that it isn't commercialized  and is the perfect place to yake a relaxing vacation 
-                        It also is accessible for the public for only a small fee in contrast with other famous island.</p>
-                        <p>In our opinion Batayan Island is a beutiful place that you sould visit, is like 
-                        the calm after the storm of a stressful life,  one experience everybody should have at least once in their life so don't hesitate do it, If it was here we wouldn't.</p>
-                        </div>
+                    <div id="img">
+                        <img src="img/imagen.jpg">
+                    </div>
+                    <div id="text">
+                    <p>Bantayan Island is a small island near the  northern coast of Cebu. the Beaches there have the same charm and beauty  as Boracay Island the best thing of vatayan Island is that it isn't commercialized  and is the perfect place to yake a relaxing vacation 
+                    It also is accessible for the public for only a small fee in contrast with other famous island.</p>
+                    <p>In our opinion Batayan Island is a beutiful place that you sould visit, is like 
+                    the calm after the storm of a stressful life,  one experience everybody should have at least once in their life so don't hesitate do it, If it was here we wouldn't.</p>
+                    </div>
                 </div>
                 <div id="footer">
                     <div id="footer-left">
